# SFuzzer

./: README.md
src/: CMakeLists.txt
src/tests/: Makefile  hello.c  testwrapper.cpp
src/utils/: log.cpp  log.h
src/wrapper/: CMakeLists.txt  hook.c  wrapper.cpp
src/wrapper/include/: config.h  wrapper.h
