include(CheckFunctionExists)
include(CheckSymbolExists)
include(CheckIncludeFile)
check_function_exists(execve HAVE_EXECVE)
check_function_exists(execv HAVE_EXECV)
check_function_exists(execvpe HAVE_EXECVPE)
check_function_exists(execvp HAVE_EXECVP)
check_function_exists(execvP HAVE_EXECVP2)
check_function_exists(exect HAVE_EXECT)
check_function_exists(execl HAVE_EXECL)
check_function_exists(execlp HAVE_EXECLP)
check_function_exists(execle HAVE_EXECLE)
check_function_exists(posix_spawn HAVE_POSIX_SPAWN)
check_function_exists(posix_spawnp HAVE_POSIX_SPAWNP)
check_symbol_exists(_NSGetEnviron crt_externs.h HAVE_NSGETENVIRON)

find_package(Threads REQUIRED)

configure_file(${CMAKE_CURRENT_SOURCE_DIR}/include/config.h ${CMAKE_CURRENT_BINARY_DIR}/config.h)
include_directories(${CMAKE_CURRENT_BINARY_DIR})

add_library(hook SHARED hook.c ${CMAKE_SOURCE_DIR}/utils/log.cpp)
target_link_libraries(hook ${CMAKE_DL_LIBS})
target_include_directories(hook PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_include_directories(hook PRIVATE ${CMAKE_SOURCE_DIR}/utils)
if(THREADS_HAVE_PTHREAD_ARG)
    set_property(TARGET hook PROPERTY COMPILE_OPTIONS "-pthread")
    set_property(TARGET hook PROPERTY INTERFACE_COMPILE_OPTIONS "-pthread")
endif()
if(CMAKE_THREAD_LIBS_INIT)
    target_link_libraries(hook "${CMAKE_THREAD_LIBS_INIT}")
endif()
